# benchmark-clickhouse-duckdb

./: .gitignore  README.md  benchmark.py  clickhouse_create_trips.sql  pyproject.toml
queries/: groupby.clickhouse.sql  groupby.duckdb.sql  self-join.clickhouse.sql  self-join.duckdb.sql
