[tool.poetry]
name = "clickhouse-duckdb-benchmark"
version = "0.1.0"
description = ""
authors = ["Benjamin Egelund-Müller <benjamin.egelundmuller@rilldata.com>"]

[tool.poetry.dependencies]
python = "^3.9"
clickhouse-driver = "^0.2.4"
duckdb = "0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
